# bifrost_run_launcher

./: .dockerignore  .env  .gitignore  Dockerfile  HISTORY.md  README.md  config.yaml  datadump.py  docker-compose.debug.yaml  docker-compose.dev.yaml  docker-compose.yaml  environment.yml  install.sh  launcher.py  pipeline.py  requirements.dev.txt  requirements.txt  run.yaml  run_script.sh  samples.yaml  setup.cfg  setup.py
.github/workflows/: docker_build_and_push_to_dockerhub.yml  docker_build_dev_on_push_branch_dev.yml  docker_build_latest_on_push_branch_master.yml  docker_build_version_on_release.yml  run_tests.yml  test_standard_workflow.yml
bifrost__run_launcher/: config.yaml  launcher.py
bifrost_run_launcher/: README.txt  __init__.py  __main__.py  config.yaml  launcher.py  per.sh  pipeline.py  post.sh  pre.sh  sofi_metadata.tsv  sofi_metadata_asm.tsv
examples/: per_sample_script.sh  post_script.sh  pre_script.sh  run_metadata.tsv
src/: config.yaml  launcher.py  pipeline.py
tests/: README.txt  colmap.json  per_asm.sh  pre_asm.sh  test_1_standard_workflow.py  test_simple.py
